--- a/HomeWork4/style/style.css
+++ b/HomeWork4/style/style.css
@@ -186,7 +186,7 @@ a {
     padding: 97px 0 96px 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-end;
     gap: 48px;
 }
 
