--- a/HomeWork7/style/style.css
+++ b/HomeWork7/style/style.css
@@ -44,12 +44,18 @@ a {
     gap: 859px;
 }
 
+.header-link-wrp {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+
 .logo-header-wrp-btn {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: 18px 0 19px 0;
-    gap: 41px;
     max-width: 111px;
     width: 100%;
 }
@@ -61,10 +67,9 @@ a {
 .page-header-wrp-btn {
     display: flex;
     align-content: center;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     margin: 18px 0 20px 0;
-    gap: 33px;
     max-width: 168px;
     width: 100%;
 }
@@ -158,7 +163,7 @@ a {
 
 .categories-list {
     display: grid;
-    grid-template-columns: repeat(3, 360px);
+    grid-template-columns: repeat(3, minmax(232px, 360px));
     gap: 30px;
 }
 
@@ -223,10 +228,14 @@ a {
 
 .products-list {
     display: grid;
-    grid-template-columns: repeat(3, 360px);
+    grid-template-columns: repeat(auto-fit, 360px);
     gap: 30px;
     margin: 0 0 48px 0;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
 }
+
 
 .products-list-item {
     list-style: none;
@@ -308,10 +317,6 @@ a {
         max-width: 736px;
     }
 
-    .header {
-        gap: 424px;
-    }
-
     .logo-header-wrp-btn {
         max-width: 111px;
         width: 100%;
@@ -374,7 +379,7 @@ a {
     }
 
     .products-list {
-        grid-template-columns: repeat(2, 360px);
+        /* grid-template-columns: repeat(2, 360px); */
         gap: 16px;
         margin: 0 0 32px 0;
     }
