--- a/HomeWork9/style/style.css
+++ b/HomeWork9/style/style.css
@@ -98,6 +98,180 @@ a {
     padding-right: 8px;
 }
 
+/* Гамбургер */
+.menu-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+}
+
+.menu-btn:hover span,
+.menu-btn:hover span::before,
+.menu-btn:hover span::after {
+    background-color: orange;
+}
+
+.menu-btn:active span,
+.menu-btn:active span::before,
+.menu-btn:active span::after {
+    background-color: red;
+}
+
+.menu-btn span {
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: relative;
+}
+
+.menu-btn span::before,
+.menu-btn span::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    top: -10px;
+    left: 0;
+}
+
+.menu-btn span::after {
+    top: 10px;
+}
+
+#menu-switch {
+    display: none;
+}
+
+#menu-switch:checked~.header-menu-list {
+    display: block;
+}
+
+.header-menu-list {
+    display: none;
+    width: 100%;
+    max-width: 232px;
+    min-height: 764px;
+    padding: 16px 33px;
+    box-sizing: border-box;
+    background-color: #fff;
+    position: absolute;
+    top: 78px;
+    right: 0;
+    z-index: 20;
+}
+
+.header-menu-list-close-btn {
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    top: 0;
+    left: 170px;
+}
+
+.header-menu-list-close-btn::before,
+.header-menu-list-close-btn::after {
+    content: "";
+    display: block;
+    width: 18px;
+    height: 2px;
+    background: #6F6E6E;
+    border-radius: 10px;
+    position: absolute;
+    top: 5px;
+    left: -3px;
+    transform: rotate(45deg);
+}
+
+.header-menu-list-close-btn::after {
+    transform: rotate(-45deg)
+}
+
+.header-menu-list-close-btn:hover::before,
+.header-menu-list-close-btn:hover::after {
+    background: #B7B6B6;
+}
+
+.header-menu-list-close-btn:active::before,
+.header-menu-list-close-btn:active::after {
+    background: #535353;
+}
+
+.menu-list-title {
+    display: block;
+    margin: 9px 0 24px 0;
+    font-weight: bold;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+.header-menu-list-item>a,
+.header-menu-sublist-item>a {
+    font-style: normal;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: normal;
+}
+
+.header-menu-list-item {
+    list-style-type: none;
+}
+
+.header-menu-list-item>a {
+    display: block;
+    margin: 0 0 11px 0;
+    color: #F16D7F;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.header-menu-list-item:hover>a {
+    color: #9889D7;
+}
+
+.header-menu-list-item:active>a {
+    color: #9D2334;
+}
+
+.header-menu-sublist {
+    padding: 0 0 0 21.5px;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+.header-menu-sublist-item {
+    list-style-type: none;
+}
+
+.header-menu-sublist-item>a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0 0 11px 0;
+    color: #6F6E6E;
+}
+
+.header-menu-sublist-item a {
+    text-decoration: none;
+}
+
+.header-menu-sublist-item:hover a {
+    text-decoration: underline;
+}
+
+.header-menu-sublist-item:active a {
+    text-decoration: none;
+}
+
+/* Гамбургер */
+
 .header-menu-list-item {
     list-style: none;
 }
